Kubernetes/Ingress/apps.yml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod-1
  labels:
    app: demo
    version: "1"
spec:
  containers:
  - name: demo-container-1
    image: nginx:latest
    ports:
    - containerPort: 80
    volumeMounts:
    - name: html-volume
      mountPath: /usr/share/nginx/html
  volumes:
  - name: html-volume
    configMap:
      name: html-content-1

---

apiVersion: v1
kind: Service
metadata:
  name: demo-service-1
spec:
  selector:
    app: demo
    version: "1"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: demo-pod-2
  labels:
    app: demo
    version: "2"
spec:
  containers:
  - name: demo-container-2
    image: nginx:latest
    ports:
    - containerPort: 80
    volumeMounts:
    - name: html-volume
      mountPath: /usr/share/nginx/html
  volumes:
  - name: html-volume
    configMap:
      name: html-content-2

---

apiVersion: v1
kind: Service
metadata:
  name: demo-service-2
spec:
  selector:
    app: demo
    version: "2"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
